Fix secondary nav height on tablet portrait.

--- a/_assets/stylesheets/docs.css.sass
+++ b/_assets/stylesheets/docs.css.sass
@@ -93,7 +93,7 @@ body
 .secondary-nav
   &.navbar-collapse
     width: 25%
-    @media (min-width: 768px)
+    @media (min-width: 992px)
       max-height: 100%
     @include respond-to(tablet-landscape-desktop)
       width: auto
